--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <footer></footer>
 </section>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script defer async type="text/javascript" src="main.js"></script>
 </body>
-<script src="main.js"></script>
+
 </html>
