--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="box logo">
         <img src="media/IM_Kuben-vgs.svg" alt="IM Kuben Logo">
     </div>
+    <div class="box fake">
+    </div>
     <div class="box spill">
         <p class="tittle">bolle</p>
     </div>
