Utvikling og Drift Side
La dem til index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,63 @@
                 <a href="jonathanarbeid/index.html" class="gif elev1"></a>
             </div>
         </div>
-
+        div class="box fagbrev">
+        <div class="it-tekst">
+            <h1>Hva gjør du som IT-driftstekniker?</h1>
+            <br>
+            <p>It-Drift handler om sikkerhet, infrastruktur, oppdateringer, servere og databaser. 
+               Som en It-driftstekniker vil du sette opp, og drifte systemet for arbeidsplasser. 
+               Du sørger for at systemene fungerer, retter opp feil, og gir brukere opplæring i hvordan man bruker det. 
+               Du skal også sørge for at systemet er sikkert og at utenforstående ikke får tak i sensitiv informasjon.
+               <br>
+               <br>
+                • overvåke, drifte og feil-søke (servere/nettverk) <br>
+                • hjelpe til med å videreutvikle bedriftens It-systemer <br>
+                • installere og vedlikeholde forskjellige programvarer <br>
+                • hjelpe og veilede de som skal bruke It-systemene  <br>
+                • dokumentere og lage rutiner for hvordan It-systemene skal bruke <br>
+            </p>
+            </div>
+        </div>
+        <div class="box fagbrev">
+            <div class="it-tekst">
+                <h1>Hva gjør du som IT-driftstekniker?</h1>
+                <br>
+                <p>It-Drift handler om sikkerhet, infrastruktur, oppdateringer, servere og databaser. 
+                   Som en It-driftstekniker vil du sette opp, og drifte systemet for arbeidsplasser. 
+                   Du sørger for at systemene fungerer, retter opp feil, og gir brukere opplæring i hvordan man bruker det. 
+                   Du skal også sørge for at systemet er sikkert og at utenforstående ikke får tak i sensitiv informasjon.
+                   <br>
+                   <br>
+                    • overvåke, drifte og feil-søke (servere/nettverk) <br>
+                    • hjelpe til med å videreutvikle bedriftens It-systemer <br>
+                    • installere og vedlikeholde forskjellige programvarer <br>
+                    • hjelpe og veilede de som skal bruke It-systemene  <br>
+                    • dokumentere og lage rutiner for hvordan It-systemene skal bruke <br>
+                </p>
+                </div>
+            </div>
+        <div class="box utvikler">
+            <div class="it-tekst">
+                    <h1>Hva gjør du som IT-utvikler?</h1>
+                    <br>
+                    <p>Som IT-utvikler skal du lage applikasjoner (som nettsider og spill) og dokumentere dem. 
+                        Applikasjoner du lager må ha krav til It-sikkerhet, personvern og bærekraft. 
+                        Når du planlegger en app må du forstå algoritmene som programmet ditt er bygd på, 
+                        du må beskytte programmet mot trusler og sørge for at du ikke bryter loven. 
+                        Du skal også kunne lage og bruke dokumentasjon og veiledninger knyttet til applikasjonene du utvikler.
+                        Vanlige arbeidsoppgaver for en It-utvikler kan være:
+                    
+                        <br>
+                        <br>
+                        •	Lage brukervennlige og sikre It-systemer (nettjenester, apper, programvare)<br>
+                        • 	Skrive oversiktlig og effektiv kode <br>
+                        •   Teste og feilsøke under utvikling av programvare <br>
+                        •  	Skrive oversiktlig og effektiv kode <br>
+                        • 	Integrering av løsninger (få ulike programvarer og It-løsninger til å fungere sammen) <br>
+                    </p>
+            </div>
+        </div>
         <footer></footer>
     </section>
 
